Stages progress API
